[gd_scene load_steps=4 format=2]

[ext_resource path="res://Theme/font/Catamaran.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Button/Button.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="Button" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -48.0
margin_right = -816.0
margin_bottom = -492.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Label"
align = 1
valign = 1

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
